(editor): fix z-index of level-controls

--- a/src/components/editor/class-editor/runeblade-editor/runeblade-editor.scss
+++ b/src/components/editor/class-editor/runeblade-editor/runeblade-editor.scss
@@ -6,7 +6,7 @@ ms-level-control {
   position: absolute;
   margin-top: 60px;
   margin-left: -25px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .bladeChasm {
